# axiomatic.systems

./: .gitignore  README.md  flake.nix
generator/: generator.cabal
generator/src/: Main.hs
nix/: haskell-overlay.nix
src/: index.md
