cabal-version:      2.4

name:               generator
version:            0.1.0.0
build-type:         Simple

executable site
  main-is:          Main.hs
  hs-source-dirs:   src
  build-depends:    base == 4.*
                  , hakyll == 4.15.*
  ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
