cabal-version:      2.4

name:               generator
version:            0.1.0.0
build-type:         Simple

executable site
  main-is:          Main.hs
  hs-source-dirs:   src
  build-depends:    base == 4.*
                  , filepath
                  , hakyll == 4.15.*
                  , process
                  , temporary
  ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
